Project building checkpoint.